--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,15 @@
     <main>
         <h1>Public key:</h1>
         <p hidden>{{pub_key}}</p>
-        <a href="/createroom">Create Room</a><br>
+        <form method="POST" action="{{ url_for('create_room') }}">
+            <input type="text" name="room_name">
+
+            <button type="submit">
+                create room
+            </button>
+        </form>
         <form method="POST" action="{{ url_for('join_room') }}">
-            <input type="text" name="room_id">
+            <input type="text" name="room_name">
 
             <button type="submit">
                 join room
